change long variables due to deprecated constructor in Java 9